--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body onload="getPageContent('home')">
 
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+    <nav class="navbar navbar-expand-lg navbar-light  ">
 
         <div class="container-fluid d-flex justify-content-center">
             <a class="navbar-brand " onclick="getPageContent('home')" href="#">TODO APP</a>
@@ -17,7 +17,7 @@
 
     </nav>
     </div>
-    <div class=" d-flex  justify-content-center">
+    <div class=" d-flex  justify-content-center" style="padding:30px; ">
         <div id="content">
         </div>
     </div>
