--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg navbar-light  ">
 
         <div class="container-fluid d-flex justify-content-center">
-            <a class="navbar-brand " onclick="getPageContent('home')" href="#">TODO APP</a>
+            <a class="navbar-brand " /*onclick="getPageContent('home')" */ href="#">TODO APP</a>
         </div>
 
     </nav>
