--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
 </head>
 
 <body onload="getPageContent('home')">
-
-
     <nav class="navbar navbar-expand-lg navbar-light  ">
-
         <div class="container-fluid d-flex justify-content-center">
-            <a class="navbar-brand " /*onclick="getPageContent('home')" */ href="#">TODO APP</a>
+            <a class="navbar-brand " onclick="getPageContent('home')" href="#">TODO APP</a>
         </div>
 
     </nav>
-    </div>
+
     <div class=" d-flex  justify-content-center" style="padding:30px; ">
         <div id="content">
         </div>
