--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <nav class="navbar navbar-expand-lg navbar-light  ">
         <div class="container-fluid d-flex justify-content-center">
-            <a class="navbar-brand " onclick="home()" href="#">TODO APP</a>
+            <a class="navbar-brand " id='TODO-APP' href="#">TODO APP</a>
         </div>
 
     </nav>
