--- a/index.html
+++ b/index.html
@@ -1,34 +1,38 @@
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Bootstrap compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  
-  <link rel="stylesheet" href="./styles.css">
-    
-  <script src="./pages.js"></script>
-  <script src="./script.js"></script>
-  <script src="./node_modules/js-sha256/src/sha256.js "></script>
-  <title>To-Do Lists</title>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Bootstrap compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="./styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./pages.js"></script>
+    <script src="./script.js"></script>
+    <script src="./node_modules/js-sha256/src/sha256.js "></script>
+    <title>To-Do Lists</title>
 </head>
+
 <body>
-  <nav class="navbar navbar-dark bg-primary">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
-        <a class="navbar-brand" href="javascript:void(0)" id="to-do-lists-link">To-Do Lists</a>
-    </div><!-- /.container-fluid -->
-  </nav>
-  <div class="container hide" id="flash-notice">
-    <div class="text-center">
-      <h4><span id="notice-message" class="success">Hello world</span></h4>
+    <nav class="navbar navbar-dark bg-primary">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <a class="navbar-brand" href="javascript:void(0)" id="to-do-lists-link">To-Do Lists</a>
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+    <div class="container hide" id="flash-notice">
+        <div class="text-center">
+            <h4><span id="notice-message" class="success">Hello world</span></h4>
+        </div>
     </div>
-  </div>
-  <main class="container h-100" id="container">
-    
-  </main>
+    <main class="container h-100" id="container">
+
+    </main>
 </body>
+
 </html>
