--- a/index.html
+++ b/index.html
@@ -25,14 +25,18 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-    <div class="container hide" id="flash-notice">
+    <div class="text-center hide" id="loader">
+    </div>
+    <main class="container h-100 " id="container">
+
+    </main>
+    <div class="hide mb-6 mt-3" id="flash-notice">
         <div class="text-center">
             <h4><span id="notice-message" class="success">Hello world</span></h4>
         </div>
     </div>
-    <main class="container h-100" id="container">
-
-    </main>
+    <script>
+    </script>
 </body>
 
 </html>
